--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 DBCONNECTION=mongodb://localhost:27017/Assignment8
 saltRound=7
-JWTKEY=sarahaatoken
-JWTEMAILKEY=routeemail
+JWTKEY=zatonatoken
+JWTEMAILKEY=zatonemail
